# satrap-dl

./: .gitignore  AUTHORS  CHANGELOG.md  Dockerfile  README.md  build-satrap.sh  dev.Dockerfile  init-satrap.sh  pyproject.toml  run_tests.sh  satrap.sh
.devcontainer/: devcontainer.json
decipher/: README.md  __init__.py
deployment/: README.md  decipher_down.sh  decipher_up.sh  docker-compose.flowintel.yml  docker-compose.misp.yml  env-template
docs/codedocs/: satrap.html  search.js
docs/codedocs/satrap/: commons.html  datamanagement.html  etl.html  frontend.html  service.html  settings.html
docs/manual/: core_concepts.md  index.md  installation.md  interfaces.md  playbooks.md  quick_start.md  setup.md
docs/notebooks/: effective_measures.ipynb  threat_profiling.ipynb
docs/notebooks/resources/: ipynb_utils.py
docs/specs/: c5-keyword.py  c5proc-doorstop-pub.sh  c5publish.py  publish.sh
docs/specs/ARC/: .doorstop.yml  ARC-001.md  ARC-001.yml  ARC-002.md  ARC-002.yml  ARC-003.md  (+3 more)
docs/traceability/: ARC.html  MRS.html  SRS.html  SWD.html  TRA.html  TST.html  index.html  traceability.csv
satrap/: README.md  __init__.py  settings.py
satrap/assets/: satrap_params.yml
satrap/commons/: exceptions.py  file_utils.py  format_utils.py  log_utils.py
satrap/engine/: cti_engine.py  query_statements.py  result_structures.py
satrap/etl/: __init__.py  etlorchestrator.py  exceptions.py  stix_constants.py
satrap/frontend/: __init__.py  commands.py  quick_start.ipynb  satrap_cli.py
satrap/service/: __init__.py  satrap_analysis.py
tests/: file_util_test.py  test_utils.py
tests/data/: custom_rel.json  missing_created.json  test-repeated-ids.json  test-sample.json  test_file_dir.json  test_grouping.json  test_malware_analysis.json  test_mwa_refs.json  test_observed_data.json  test_process.json  test_transitive_xxy.json  test_transitive_xyy.json  test_transitive_xyz.json  x509_test.json
tests/typedb/: builder_test.py  objects_test.py
tutorials/bsides2025/: outline.md  threat_actor_profiling.ipynb
(+334 files in other folders)
