[tool.poetry]
name = "satrap"
version = "0.2"
description = "SATRAP (Semi-Automated Threat Reconnaissance and Analysis Platform) is a software for assisting on the analysis of cyber threat intelligence (CTI) powered by automated reasoning."
authors = ["Itzel Vazquez Sandoval <itzel@abstractionslab.lu>", "Arash Atashpendar <arash@abstractionslab.lu>", "Sven Angel <sven.angel@proton.me>", "Gulsezim Duisen <duisen@itrust.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.2,<=3.11"
typedb-driver = "^2.29.0"
requests = "^2.32.3"
jsonschema = "^4.23.0"
stix2 = "^3.0.1"
tabulate = "^0.9.0"
pyyaml = "^6.0.2"
pymisp = "^2.5.10"
doorstop = "3.0b10"

[tool.poetry.group.doc.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
satrap = "satrap.frontend.satrap_cli:cli"
